[component-count] - Optimize loops and get method GetCatalogEntity single responsibility.